# claude-chat-mcp

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts  wrangler.jsonc
.github/workflows/: control-panel.yml  release.yml  test.yml
crates/connector-core/: Cargo.toml
crates/connector-core/src/: env.rs  error.rs  format.rs  http.rs  lib.rs  pac.rs  perms.rs  system_proxy.rs
crates/connectors/airtable/: Cargo.toml
crates/connectors/airtable/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/bitbucket/: Cargo.toml
crates/connectors/bitbucket/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/clickhouse/: Cargo.toml
crates/connectors/clickhouse/src/: main.rs  manifest.rs
crates/connectors/confluence/: Cargo.toml
crates/connectors/confluence/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/elasticsearch/: Cargo.toml
crates/connectors/elasticsearch/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/github/: Cargo.toml
crates/connectors/github/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/gitlab/: Cargo.toml
crates/connectors/gitlab/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/grafana/: Cargo.toml
crates/connectors/grafana/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/jenkins/: Cargo.toml
crates/connectors/jenkins/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/jira/: Cargo.toml
crates/connectors/jira/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/mariadb/: Cargo.toml
crates/connectors/mariadb/src/: main.rs  manifest.rs
crates/connectors/mattermost/: Cargo.toml
crates/connectors/mattermost/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/mongodb/: Cargo.toml
crates/connectors/mongodb/src/: config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/mysql/: Cargo.toml
crates/connectors/mysql/src/: main.rs  manifest.rs
crates/connectors/oracle/: Cargo.toml
crates/connectors/oracle/src/: main.rs  manifest.rs
crates/connectors/postgres/: Cargo.toml
crates/connectors/postgres/src/: main.rs  manifest.rs
crates/connectors/redmine/: Cargo.toml
crates/connectors/redmine/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/connectors/sentry/: Cargo.toml
crates/connectors/sentry/src/: client.rs  config.rs  format.rs  handler.rs  main.rs  manifest.rs
crates/control-panel/: Cargo.toml  tauri.conf.json
crates/control-panel/capabilities/: default.json
crates/control-panel/icons/: icon.icns
crates/control-panel/resources/: README.md  binaries.json
crates/control-panel/src/: binaries.rs  claude_config.rs  commands.rs  installer.rs  lib.rs  main.rs  registry.rs
crates/control-panel/tests/: install_flow.rs
crates/control-panel/ui/: app.js  index.html  style.css
crates/db-core/: Cargo.toml
crates/db-core/src/: config.rs  engine.rs  lib.rs  server.rs  sql.rs
crates/db-core/src/engines/: clickhouse.rs  mod.rs  mysql.rs  oracle.rs  postgres.rs
crates/server-runtime/: Cargo.toml
crates/server-runtime/src/: lib.rs
docs/superpowers/plans/: 2026-06-23-app-self-update.md  2026-06-23-fetch-on-demand-and-download-fix.md  2026-06-23-gui-e2e-tauri-driver.md
docs/superpowers/specs/: 2026-06-22-claude-chat-mcp-design.md  2026-06-23-fetch-on-demand-update-and-e2e-design.md
scripts/: cargo.ps1  gen-binaries-json.mjs  gen-tutorial-shots.mjs  install-local.ps1  pack-mcpb.mjs  registry.ps1  serve-site.ps1  static-server.mjs
site/: _headers  app.js  index.html  llms.txt  registry.json  robots.txt  site.webmanifest  sitemap.xml  styles.css
tests/: app-ui.spec.ts  catalog.spec.ts  global-setup.ts  i18n.spec.ts  install.spec.ts  links.spec.ts  search.spec.ts  tutorial.spec.ts
