[workspace]
resolver = "2"
members = [
    "crates/connector-core",
    "crates/server-runtime",
    "crates/db-core",
    "crates/connectors/confluence",
    "crates/connectors/jira",
    "crates/connectors/bitbucket",
    "crates/connectors/airtable",
    "crates/connectors/mysql",
    "crates/connectors/mariadb",
    "crates/connectors/clickhouse",
    "crates/connectors/oracle",
]
# The Tauri control-panel app is built separately (it embeds the connector
# binaries via include_bytes!, so it can't build until resources/ is populated).
exclude = ["crates/control-panel"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std", "net", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
url = "2"
regex = "1"
rmcp = { version = "0.8", features = ["server", "macros", "transport-io"] }
schemars = { version = "1", package = "schemars" }

connector-core = { path = "crates/connector-core" }
server-runtime = { path = "crates/server-runtime" }
db-core = { path = "crates/db-core" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
