[package]
name = "control-panel"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[lib]
name = "control_panel"
path = "src/lib.rs"

[[bin]]
name = "ClaudeChatMCP"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["winuser"] }
