[package]
name = "mysql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mysql"
path = "src/main.rs"

[dependencies]
db-core = { path = "../../db-core" }
connector-core = { workspace = true }
server-runtime = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
