[package]
name = "oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "oracle"
path = "src/main.rs"

[features]
default = []
# Compiles in real Oracle support (forwards to db-core's optional oracle dep).
# Requires Oracle Instant Client at build/link time.
oracle = ["db-core/oracle"]

[dependencies]
# db-core is pulled in WITHOUT its oracle feature by default, so the whole
# workspace builds without Oracle Instant Client. Enable this crate's `oracle`
# feature to turn it on.
db-core = { path = "../../db-core" }
connector-core = { workspace = true }
server-runtime = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
